Added configuration failed to load message, and border around swfobject.

--- a/html-template/index.template.html
+++ b/html-template/index.template.html
@@ -23,9 +23,10 @@
         <style type="text/css" media="screen"> 
             html, body  { height:100%; }
             body { margin:0; padding:0; overflow:auto; text-align:center; 
-                   background-color: ${bgcolor}; }   
+                   background-color: ${bgcolor}; }
             object:focus { outline:none; }
             #flashContent { display:none; }
+            #Slot { border: 1px solid; }
         </style>
         
         <!-- Enable Browser History by replacing useBrowserHistory tokens with two hyphens -->
