Added footer to html wrapper linking to my website.

--- a/slot-flash/html-template/index.template.html
+++ b/slot-flash/html-template/index.template.html
@@ -123,5 +123,8 @@ Learn more about Flex at http://flex.org
         <!--<![endif]-->
     </object>
 </noscript>
+<footer>
+    <a alt="Website" href="http://www.caffeinatednightmare.com/">Created by: Joshua Barnett</a>
+</footer>
 </body>
 </html>
