--- a/slot-dart/web/index.html
+++ b/slot-dart/web/index.html
@@ -6,7 +6,7 @@
     <title>Slot</title>
     <script async type="application/dart" src="slot.dart"></script>
     <script async src="packages/browser/dart.js"></script>
-    <link rel='stylesheet' type='text/css' href='packages/slot/assets/style.css' />
+    <link rel='stylesheet' type='text/css' href='style.css' />
   </head>
   <body>
   </body>
