Ported core module, and the classes which extend them.

--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,10 @@
     <title>slot-es5</title>
     <!-- bower:css -->
     <!-- endbower -->
-    <link rel='stylesheet' type='text/css' href='style.css' />
+    <link rel='stylesheet' type='text/css' href='index.css' />
   </head>
   <body>
-    <div style="font-size:0;font-family:'Minecraftia';">&nbsp;</div>
-    <footer>
-        <a alt="Website" href="http://www.caffeinatednightmare.com/">Created by: Joshua Barnett</a>
-    </footer>
+    <!-- <div style="font-size:0;font-family:'Minecraftia';">&nbsp;</div> -->
     <!-- bower:js -->
     <!-- endbower -->
     <script type="text/javascript" src="bundle.js"></script>
